--- a/.classpath
+++ b/.classpath
@@ -1,46 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/aspectjrt-1.6.8.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/aspectjweaver-1.6.8.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/cglib-nodep-2.2.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/commons-dbcp-1.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/commons-fileupload-1.3.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/commons-pool-1.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/freemarker-2.3.19.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/ibatis-sqlmap-2.3.4.726.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/jackson-annotations-2.1.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/jackson-core-2.1.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/jackson-databind-2.1.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/jcl-over-slf4j-1.7.5.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/junit-4.8.1.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/mysql-connector-java-5.1.21.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/servlet-api-2.4.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/slf4j-log4j12-1.6.6.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-aop-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-beans-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-context-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-context-support-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-core-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-expression-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-jdbc-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-orm-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-tx-3.2.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-web-3.2.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/program/agergia  jar/spring-webmvc-3.2.2.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-webmvc/3.2.2.RELEASE/spring-webmvc-3.2.2.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/aopalliance-1.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/aspectjrt-1.6.8.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/aspectjweaver-1.6.8.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/cglib-nodep-2.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-dbcp-1.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-fileupload-1.3.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-io-2.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-lang3-3.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-logging-1.1.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-pool-1.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/freemarker-2.3.19.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/ibatis-sqlmap-2.3.4.726.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/jackson-annotations-2.1.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/jackson-core-2.1.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/jackson-databind-2.1.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/jcl-over-slf4j-1.7.5.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/jstl-1.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/junit-4.8.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/log4j-1.2.17.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/mysql-connector-java-5.1.21.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/servlet-api-2.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/slf4j-api-1.7.5.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/slf4j-log4j12-1.6.6.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-aop-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-beans-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-context-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-context-support-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-core-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-expression-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-jdbc-3.2.4.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-orm-3.2.4.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-tx-3.2.4.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-web-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-webmvc-3.2.2.RELEASE.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
