--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src_user"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="D:/work/agergia  jar/aopalliance-1.0.jar">
@@ -174,5 +175,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/mybatis-3.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/work/agergia  jar/mybatis-spring-1.2.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
