--- a/.classpath
+++ b/.classpath
@@ -4,178 +4,42 @@
 	<classpathentry kind="src" path="src_user"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/aopalliance-1.0.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/aspectjrt-1.6.8.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/aspectjweaver-1.6.8.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/cglib-nodep-2.2.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-dbcp-1.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-fileupload-1.3.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-io-2.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-lang3-3.1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-logging-1.1.1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/commons-pool-1.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/freemarker-2.3.19.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/ibatis-sqlmap-2.3.4.726.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/jackson-annotations-2.1.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/jackson-core-2.1.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/jackson-databind-2.1.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/jcl-over-slf4j-1.7.5.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/jstl-1.2.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/junit-4.8.1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/log4j-1.2.17.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/mysql-connector-java-5.1.21.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/servlet-api-2.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/slf4j-api-1.7.5.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/slf4j-log4j12-1.6.6.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-aop-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-beans-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-context-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-context-support-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-core-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-expression-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-jdbc-3.2.4.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-orm-3.2.4.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-tx-3.2.4.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-web-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/spring-webmvc-3.2.2.RELEASE.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/mybatis-3.0.1.jar"/>
-	<classpathentry kind="lib" path="D:/work/agergia  jar/mybatis-spring-1.2.2.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/aspectjrt-1.6.8.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/aspectjweaver-1.6.8.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/commons-dbcp-1.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/commons-lang3-3.1.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/commons-pool-1.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/freemarker-2.3.19.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/ibatis-sqlmap-2.3.4.726.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/jackson-annotations-2.1.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/jackson-core-2.1.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/jackson-databind-2.1.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/jcl-over-slf4j-1.7.5.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/mysql-connector-java-5.1.21.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/servlet-api-2.4.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/slf4j-log4j12-1.6.6.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-aop-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-beans-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-context-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-context-support-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-core-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-expression-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-jdbc-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-orm-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-tx-3.2.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-web-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-webmvc-3.2.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/mybatis-spring-1.2.2.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/mybatis-3.2.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
