--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="src_user"/>
+	<classpathentry kind="src" path="src_test"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -41,5 +41,6 @@
 	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-webmvc-3.2.2.RELEASE.jar"/>
 	<classpathentry kind="lib" path="F:/jar/agergia  jar/mybatis-spring-1.2.2.jar"/>
 	<classpathentry kind="lib" path="F:/jar/agergia  jar/mybatis-3.2.2.jar"/>
+	<classpathentry kind="lib" path="F:/jar/agergia  jar/spring-test-3.2.4.RELEASE.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
